# geoanalisis-mcp

./: .gitignore  .mcpbignore  LICENSE  README.md  manifest.json  pyproject.toml
geoanalisis/: server.py
