[project]
name = "geoanalisis-mcp"
version = "0.1.0"
description = "MCP server para lectura y análisis de datos espaciales vectoriales"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9",
    "pyogrio>=0.10",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pandas>=2.0",
]

[project.scripts]
geoanalisis-mcp = "geoanalisis.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geoanalisis"]
