[project]
name = "geoanalisis-mcp"
version = "0.2.7"
description = "MCP server para lectura, análisis y cartografía de datos espaciales vectoriales"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Alexander Robles", email = "dalexrobles@gmail.com" }]
keywords = ["mcp", "gis", "geospatial", "geopandas", "shapefile", "geojson", "cartografia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9",
    "pyogrio>=0.10",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "contextily>=1.5",
]

[project.urls]
Homepage = "https://github.com/alexrobl/geoanalisis-mcp"
Repository = "https://github.com/alexrobl/geoanalisis-mcp"
Issues = "https://github.com/alexrobl/geoanalisis-mcp/issues"

[project.scripts]
geoanalisis-mcp = "geoanalisis.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geoanalisis"]
